--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -18,4 +18,4 @@ jobs:
           php-version: ${{ matrix.php }} 
       - name: Run tests
         run: |
-          bash .travis.phplint.sh
+          bash phplint.sh
