--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -7,7 +7,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        php: ['php7.3', 'php7.4']
+        php: ['7.3', '7.4']
     steps:
       - uses: actions/checkout@v2
         with:
